--- a/app/src/main/res/values/mc_strings.xml
+++ b/app/src/main/res/values/mc_strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="MissingTranslation">
 
     <string name="mc_send">发送</string>
     <string name="mc_title_no_net">对话</string>
