--- a/app/src/main/res/layout/activity_me_manager.xml
+++ b/app/src/main/res/layout/activity_me_manager.xml
@@ -45,6 +45,15 @@
 
     </RelativeLayout>
 
+    <TextView
+        android:id="@+id/noMemberTextView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="@string/no_member"
+        android:textColor="@color/hint_light_grey"
+        android:textSize="16sp"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="48dp"
