--- a/app/src/main/res/layout/list_member_stat.xml
+++ b/app/src/main/res/layout/list_member_stat.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:baselineAligned="false"
-    android:background="@color/list_item_unselected" >
+    android:baselineAligned="false">
 
     <LinearLayout
         android:layout_width="match_parent"
