--- a/app/src/main/res/layout/activity_me_profile.xml
+++ b/app/src/main/res/layout/activity_me_profile.xml
@@ -256,6 +256,55 @@
 			
 			</RelativeLayout>
 
+            <include
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                layout="@layout/view_divider"/>
+
+            <RelativeLayout
+                android:id="@+id/bankLayout"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@drawable/me_item_drawable" >
+
+                <TextView
+                    android:id="@+id/bankPrompt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="16dp"
+                    android:text="@string/bank_account"
+                    android:textColor="@color/font_major_dark"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/bankTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toLeftOf="@+id/bankNextImageView"
+                    android:layout_toRightOf="@+id/bankPrompt"
+                    android:gravity="right"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:ellipsize="end"
+                    android:singleLine="true"
+                    android:textColor="@color/hint_grey"
+                    android:textSize="14sp" />
+
+                <ImageView
+                    android:id="@+id/bankNextImageView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="10dp"
+                    android:contentDescription="@string/next"
+                    android:src="@drawable/next" />
+
+            </RelativeLayout>
+
 		    <include
 				android:layout_width="match_parent"
 				android:layout_height="0.5dp"
