--- a/app/src/main/res/layout/list_report.xml
+++ b/app/src/main/res/layout/list_report.xml
@@ -45,7 +45,7 @@
             android:layout_marginRight="6dp"
             android:ellipsize="end"
             android:singleLine="true"
-            android:textColor="@color/font_major_dark"
+            android:textColor="@color/hint_light_grey"
             android:textSize="14sp" />
 
         <TextView
