--- a/app/src/main/res/layout/view_stat_others.xml
+++ b/app/src/main/res/layout/view_stat_others.xml
@@ -25,7 +25,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="6dp"
-            android:text="2015年3月"
             android:textColor="@color/major_dark"
             android:textSize="16sp"/>
 
@@ -94,7 +93,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/amountLayout"
                 android:layout_centerHorizontal="true"
-                android:text="@string/reimbursement"
+                android:text="@string/total"
                 android:textColor="@color/hint_grey"
                 android:textSize="16sp" />
 
