--- a/app/src/main/res/layout/activity_reim_show.xml
+++ b/app/src/main/res/layout/activity_reim_show.xml
@@ -96,6 +96,176 @@
 				android:layout_width="match_parent"
 				android:layout_height="0.5dp"
 			  	layout="@layout/view_divider"/>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="56dp" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginTop="19dp"
+                    android:layout_marginLeft="16dp"
+                    android:text="@string/photo"
+                    android:textColor="@color/hint_grey"
+                    android:textSize="14sp" />
+
+                <LinearLayout
+                    android:id="@+id/invoiceLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:paddingTop="3dp"
+                    android:paddingBottom="13dp"
+                    android:layout_marginLeft="80dp"
+                    android:layout_marginRight="16dp" />
+
+            </RelativeLayout>
+
+            <include
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_marginLeft="80dp"
+                layout="@layout/view_divider"/>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="56dp" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginTop="19dp"
+                    android:layout_marginLeft="16dp"
+                    android:text="@string/category"
+                    android:textColor="@color/hint_grey"
+                    android:textSize="14sp" />
+
+                <ImageView
+                    android:id="@+id/categoryImageView"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginLeft="90dp"
+                    android:contentDescription="@string/icon"
+                    android:src="@drawable/default_icon" />
+
+                <TextView
+                    android:id="@+id/categoryTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toRightOf="@+id/categoryImageView"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="16dp"
+                    android:text="@string/not_available"
+                    android:textColor="@color/font_major_dark"
+                    android:textSize="18sp" />
+
+            </RelativeLayout>
+
+            <include
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_marginLeft="80dp"
+                layout="@layout/view_divider"/>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="56dp" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginTop="19dp"
+                    android:layout_marginLeft="16dp"
+                    android:text="@string/vendor"
+                    android:textColor="@color/hint_grey"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/vendorTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_toLeftOf="@+id/locationLayout"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="80dp"
+                    android:layout_marginRight="6dp"
+                    android:textColor="@color/font_major_dark"
+                    android:textSize="18sp" />
+
+                <LinearLayout
+                    android:id="@+id/locationLayout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_alignParentRight="true"
+                    android:paddingTop="19dp"
+                    android:paddingBottom="18dp"
+                    android:paddingRight="8dp">
+
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:contentDescription="@string/location"
+                        android:src="@drawable/location" />
+
+                    <TextView
+                        android:id="@+id/locationTextView"
+                        android:layout_width="wrap_content"
+                        android:maxWidth="68dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="3dp"
+                        android:ellipsize="end"
+                        android:singleLine="true"
+                        android:textColor="@color/hint_grey"
+                        android:textSize="14sp" />
+
+                </LinearLayout>
+
+            </RelativeLayout>
+
+            <include
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_marginLeft="80dp"
+                layout="@layout/view_divider"/>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="56dp" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginTop="19dp"
+                    android:layout_marginLeft="16dp"
+                    android:text="@string/time"
+                    android:textColor="@color/hint_grey"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/timeTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="80dp"
+                    android:layout_marginRight="16dp"
+                    android:textColor="@color/font_major_dark"
+                    android:textSize="18sp" />
+
+            </RelativeLayout>
+
+            <include
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_marginLeft="80dp"
+                layout="@layout/view_divider"/>
 	
 	        <RelativeLayout
 	            android:layout_width="match_parent"
@@ -131,178 +301,6 @@
 	                android:gravity="center"
 	                android:text="@string/status_prove_ahead_approved"
 	                android:textColor="@color/item_approved"
-	                android:textSize="18sp" />
-	
-	        </RelativeLayout>
-            
-		    <include                 
-				android:layout_width="match_parent"
-				android:layout_height="0.5dp"
-				android:layout_marginLeft="80dp"
-			  	layout="@layout/view_divider"/>
-	
-	        <RelativeLayout
-	            android:layout_width="match_parent"
-	            android:layout_height="56dp" >
-
-	            <TextView
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:layout_alignParentLeft="true"
-	                android:layout_marginTop="19dp"
-	                android:layout_marginLeft="16dp"
-	                android:text="@string/photo"
-	                android:textColor="@color/hint_grey"
-	                android:textSize="14sp" />	            
-
-	            <LinearLayout
-	                android:id="@+id/invoiceLayout"
-	                android:layout_width="match_parent"
-	                android:layout_height="wrap_content"
-	                android:orientation="vertical"
-	                android:paddingTop="3dp"
-	                android:paddingBottom="13dp" 
-	                android:layout_marginLeft="80dp"
-	                android:layout_marginRight="16dp" />
-	
-	        </RelativeLayout>
-            
-		    <include                 
-				android:layout_width="match_parent"
-				android:layout_height="0.5dp"
-				android:layout_marginLeft="80dp"
-			  	layout="@layout/view_divider"/>
-	
-	        <RelativeLayout
-	            android:layout_width="match_parent"
-	            android:layout_height="56dp" >
-
-	            <TextView
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:layout_alignParentLeft="true"
-	                android:layout_marginTop="19dp"
-	                android:layout_marginLeft="16dp"
-	                android:text="@string/time"
-	                android:textColor="@color/hint_grey"
-	                android:textSize="14sp" />
-
-	            <TextView
-	                android:id="@+id/timeTextView"
-	                android:layout_width="match_parent"
-	                android:layout_height="wrap_content"
-	                android:layout_centerVertical="true"
-	                android:layout_marginLeft="80dp"
-	                android:layout_marginRight="16dp"
-	                android:textColor="@color/font_major_dark"
-	                android:textSize="18sp" />
-	
-	        </RelativeLayout>
-            
-		    <include                 
-				android:layout_width="match_parent"
-				android:layout_height="0.5dp"
-				android:layout_marginLeft="80dp"
-			  	layout="@layout/view_divider"/>
-	
-	        <RelativeLayout
-	            android:layout_width="match_parent"
-	            android:layout_height="56dp" >
-
-	            <TextView
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:layout_alignParentLeft="true"
-	                android:layout_marginTop="19dp"
-	                android:layout_marginLeft="16dp"
-	                android:text="@string/vendor"
-	                android:textColor="@color/hint_grey"
-	                android:textSize="14sp" />
-
-	            <TextView
-	                android:id="@+id/vendorTextView"
-	                android:layout_width="match_parent"
-	                android:layout_height="wrap_content"
-	                android:layout_centerVertical="true"
-	                android:layout_marginLeft="80dp"
-	                android:layout_marginRight="16dp"
-	                android:textColor="@color/font_major_dark"
-	                android:textSize="18sp" />
-	
-	        </RelativeLayout>
-            
-		    <include                 
-				android:layout_width="match_parent"
-				android:layout_height="0.5dp"
-				android:layout_marginLeft="80dp"
-			  	layout="@layout/view_divider"/>
-	
-	        <RelativeLayout
-	            android:layout_width="match_parent"
-	            android:layout_height="56dp" >
-
-	            <TextView
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:layout_alignParentLeft="true"
-	                android:layout_marginTop="19dp"
-	                android:layout_marginLeft="16dp"
-	                android:text="@string/location"
-	                android:textColor="@color/hint_grey"
-	                android:textSize="14sp" />
-
-	            <TextView
-	                android:id="@+id/locationTextView"
-	                android:layout_width="match_parent"
-	                android:layout_height="wrap_content"
-	                android:layout_centerVertical="true"
-	                android:layout_marginLeft="80dp"
-	                android:layout_marginRight="16dp"
-	                android:textColor="@color/font_major_dark"
-	                android:textSize="18sp" />
-	
-	        </RelativeLayout>
-            
-		    <include                 
-				android:layout_width="match_parent"
-				android:layout_height="0.5dp"
-				android:layout_marginLeft="80dp"
-			  	layout="@layout/view_divider"/>
-	
-	        <RelativeLayout
-	            android:layout_width="match_parent"
-	            android:layout_height="56dp" >
-
-	            <TextView
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:layout_alignParentLeft="true"
-	                android:layout_marginTop="19dp"
-	                android:layout_marginLeft="16dp"
-	                android:text="@string/category"
-	                android:textColor="@color/hint_grey"
-	                android:textSize="14sp" />
-
-			    <ImageView
-			        android:id="@+id/categoryImageView"
-			        android:layout_width="30dp"
-			        android:layout_height="30dp"
-			        android:layout_centerVertical="true"
-			        android:layout_alignParentLeft="true"
-	                android:layout_marginLeft="90dp"
-			        android:contentDescription="@string/icon"
-			        android:src="@drawable/default_icon" />
-
-	            <TextView
-	                android:id="@+id/categoryTextView"
-	                android:layout_width="match_parent"
-	                android:layout_height="wrap_content"
-	                android:layout_centerVertical="true"
-	                android:layout_toRightOf="@+id/categoryImageView"
-	                android:layout_marginLeft="10dp"
-	                android:layout_marginRight="16dp"
-	                android:text="@string/not_available"
-	                android:textColor="@color/font_major_dark"
 	                android:textSize="18sp" />
 	
 	        </RelativeLayout>
