--- a/app/src/main/res/layout/activity_me_change_password.xml
+++ b/app/src/main/res/layout/activity_me_change_password.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/baseLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@color/background"
     android:orientation="vertical" >
 
@@ -55,7 +55,7 @@
 	        android:hint="@string/input_password"
 	        android:inputType="textPassword"
             android:textColor="@color/font_major_dark"
-            android:textSize="14sp" />
+            android:textSize="16sp"/>
     </RelativeLayout>
 
     <include
@@ -84,7 +84,7 @@
 	        android:hint="@string/input_new_password"
 	        android:inputType="textPassword"
             android:textColor="@color/font_major_dark"
-            android:textSize="14sp" />
+            android:textSize="16sp" />
     </RelativeLayout>
 
     <include
@@ -107,7 +107,7 @@
 	        android:hint="@string/input_confirm_password"
 	        android:inputType="textPassword"
             android:textColor="@color/font_major_dark"
-            android:textSize="14sp" />
+            android:textSize="16sp" />
     </RelativeLayout>
 
     <include
