--- a/app/src/main/res/layout/activity_me_email.xml
+++ b/app/src/main/res/layout/activity_me_email.xml
@@ -74,8 +74,8 @@
 		            android:background="@null"
 		            android:hint="@string/input_email"
 		            android:inputType="text|textEmailAddress"
-		            android:textSize="14sp"
-		            android:textColor="@color/font_major_dark" />
+                    android:textColor="@color/font_major_dark"
+                    android:textSize="16sp"/>
 		        
 		    </RelativeLayout>
 		
