--- a/app/src/main/res/layout/activity_me_phone.xml
+++ b/app/src/main/res/layout/activity_me_phone.xml
@@ -73,9 +73,9 @@
 		            android:layout_marginRight="16dp"
 		            android:background="@null"
 		            android:hint="@string/input_phone"
-		            android:inputType="text|phone"
-		            android:textSize="14sp"
-		            android:textColor="@color/font_major_dark" />
+		            android:inputType="phone"
+                    android:textColor="@color/font_major_dark"
+                    android:textSize="16sp"/>
 		        
 		    </RelativeLayout>
 		
