--- a/app/src/main/res/layout/activity_me_send_invite.xml
+++ b/app/src/main/res/layout/activity_me_send_invite.xml
@@ -53,9 +53,10 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:background="@null"
+            android:inputType="textEmailAddress"
             android:hint="@string/input_username"
             android:textColor="@color/font_major_dark"
-            android:textSize="14sp"/>
+            android:textSize="16sp"/>
         
     </RelativeLayout>
 
