--- a/app/src/main/res/layout/activity_reim_location.xml
+++ b/app/src/main/res/layout/activity_reim_location.xml
@@ -56,7 +56,8 @@
             android:layout_marginRight="16dp"
             android:background="@null"
             android:hint="@string/input_location"
-            android:inputType="text" />
+            android:textColor="@color/font_major_dark"
+            android:textSize="16sp"/>
 
     </RelativeLayout>
             
