--- a/app/src/main/res/layout/activity_reim_vendor.xml
+++ b/app/src/main/res/layout/activity_reim_vendor.xml
@@ -66,7 +66,8 @@
             android:layout_marginRight="16dp"
             android:background="@null"
             android:hint="@string/input_vendor"
-            android:inputType="text" />
+            android:textColor="@color/font_major_dark"
+            android:textSize="16sp"/>
 
     </LinearLayout>
             
