--- a/app/src/main/res/layout/activity_report_cc.xml
+++ b/app/src/main/res/layout/activity_report_cc.xml
@@ -123,7 +123,8 @@
                 android:layout_marginRight="16dp"
                 android:background="@null"
                 android:hint="@string/input_cc"
-                android:inputType="text" />
+                android:textColor="@color/font_major_dark"
+                android:textSize="16sp"/>
 
         </LinearLayout>
 
