--- a/app/src/main/res/layout/activity_report_comment.xml
+++ b/app/src/main/res/layout/activity_report_comment.xml
@@ -82,8 +82,9 @@
 	            android:layout_marginTop="6dp"
 	            android:layout_marginBottom="6dp"
 	            android:layout_marginLeft="12dp"	            
-	            android:hint="@string/input_comment" >
-	        </EditText>
+	            android:hint="@string/input_comment"
+                android:textColor="@color/font_major_dark"
+                android:textSize="16sp"/>
 	
 	        <TextView
 	            android:id="@+id/sendTextView"
@@ -93,7 +94,7 @@
 	            android:paddingRight="12dp"
 	            android:gravity="center"
 	            android:text="@string/send"
-	            android:textColor="@color/font_major_dark"
+	            android:textColor="@color/major_dark"
 	            android:textSize="18sp" />
 	
 	    </LinearLayout>
