--- a/app/src/main/res/layout/activity_report_manager.xml
+++ b/app/src/main/res/layout/activity_report_manager.xml
@@ -120,7 +120,8 @@
             android:layout_marginRight="16dp"
             android:background="@null"
             android:hint="@string/input_manager"
-            android:inputType="text" />
+            android:textColor="@color/font_major_dark"
+            android:textSize="16sp"/>
 
         <include
             android:layout_width="match_parent"
