--- a/app/src/main/res/layout/activity_start_sign_up_by_phone.xml
+++ b/app/src/main/res/layout/activity_start_sign_up_by_phone.xml
@@ -41,7 +41,7 @@
             android:paddingTop="12dp"
             android:paddingBottom="12dp"
             android:hint="@string/input_phone"
-            android:inputType="text|phone"
+            android:inputType="phone"
             android:textColor="@color/font_major_light"
             android:textColorHint="@color/hint_white"
             android:background="@null"
@@ -113,7 +113,7 @@
                 android:paddingTop="12dp"
                 android:paddingBottom="12dp"
                 android:hint="@string/input_code"
-                android:inputType="textEmailAddress"
+                android:inputType="number"
                 android:textColor="@color/font_major_light"
                 android:textColorHint="@color/hint_white"
                 android:background="@null"
