--- a/app/src/main/res/layout/grid_gallery.xml
+++ b/app/src/main/res/layout/grid_gallery.xml
@@ -1,7 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/avatarImageView"
@@ -10,24 +9,24 @@
         android:layout_centerInParent="true"
         android:contentDescription="@string/image"
         android:scaleType="centerCrop"
-        android:src="@drawable/no_media" />
+        android:src="@drawable/no_media"/>
 
     <RelativeLayout
         android:id="@+id/checkLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-		android:layout_alignParentTop="true"
-		android:layout_alignParentRight="true"
-		android:padding="5dp" >
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+		android:layout_alignParentRight="true">
 
 	    <ImageView
 	        android:id="@+id/checkImageView"
 	        android:layout_width="20dp"
 	        android:layout_height="20dp"
-	        android:layout_centerInParent="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="5dp"
 	        android:contentDescription="@string/check"
 	        android:background="@drawable/check_drawable"
-	       	android:scaleType="fitXY" />
+	       	android:scaleType="fitXY"/>
     </RelativeLayout>
 
 </RelativeLayout>
