--- a/app/src/main/res/layout/activity_me_change_password.xml
+++ b/app/src/main/res/layout/activity_me_change_password.xml
@@ -45,7 +45,7 @@
         android:layout_height="50dp"
         android:background="@color/major_light" >
 
-        <EditText
+        <classes.widget.ClearEditText
             android:id="@+id/oldPasswordEditText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -53,7 +53,6 @@
             android:layout_marginRight="16dp"
             android:background="@null"
 	        android:hint="@string/input_password"
-	        android:inputType="textPassword"
             android:textColor="@color/font_major_dark"
             android:textSize="16sp"/>
     </RelativeLayout>
@@ -74,7 +73,7 @@
         android:layout_height="50dp"
         android:background="@color/major_light" >
 
-        <EditText
+        <classes.widget.ClearEditText
             android:id="@+id/newPasswordEditText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -82,7 +81,6 @@
             android:layout_marginRight="16dp"
             android:background="@null"
 	        android:hint="@string/input_new_password"
-	        android:inputType="textPassword"
             android:textColor="@color/font_major_dark"
             android:textSize="16sp" />
     </RelativeLayout>
@@ -97,7 +95,7 @@
         android:layout_height="50dp"
         android:background="@color/major_light" >
 
-        <EditText
+        <classes.widget.ClearEditText
             android:id="@+id/confirmPasswordEditText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -105,7 +103,6 @@
             android:layout_marginRight="16dp"
             android:background="@null"
 	        android:hint="@string/input_confirm_password"
-	        android:inputType="textPassword"
             android:textColor="@color/font_major_dark"
             android:textSize="16sp" />
     </RelativeLayout>
