--- a/app/src/main/res/layout/activity_me_bank.xml
+++ b/app/src/main/res/layout/activity_me_bank.xml
@@ -65,7 +65,7 @@
 			        android:layout_height="0.5dp"
 			        layout="@layout/view_divider" />
 		
-		        <EditText
+		        <classes.widget.ClearEditText
 		            android:id="@+id/bankEditText"
 		            android:layout_width="match_parent"
 		            android:layout_height="match_parent"
