--- a/app/src/main/res/layout/activity_reim_member.xml
+++ b/app/src/main/res/layout/activity_reim_member.xml
@@ -86,7 +86,7 @@
             android:contentDescription="@string/search"
             android:src="@drawable/search" />
 
-        <EditText
+        <classes.widget.ClearEditText
             android:id="@+id/memberEditText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
