--- a/app/src/main/res/layout/activity_report_cc.xml
+++ b/app/src/main/res/layout/activity_report_cc.xml
@@ -114,7 +114,7 @@
                 android:contentDescription="@string/search"
                 android:src="@drawable/search" />
 
-            <EditText
+            <classes.widget.ClearEditText
                 android:id="@+id/ccEditText"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
