--- a/app/src/main/res/layout/activity_start_find_by_email.xml
+++ b/app/src/main/res/layout/activity_start_find_by_email.xml
@@ -41,7 +41,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
 
-        <EditText
+        <classes.widget.ClearEditText
             android:id="@+id/emailEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -52,6 +52,7 @@
             android:paddingBottom="12dp"
             android:hint="@string/input_email"
             android:inputType="textEmailAddress"
+            android:drawableRight="@drawable/delete_start_drawable"
             android:textColor="@color/font_major_light"
             android:textColorHint="@color/hint_white"
             android:background="@null"
