--- a/app/src/main/res/layout/activity_start_reset_password.xml
+++ b/app/src/main/res/layout/activity_start_reset_password.xml
@@ -40,7 +40,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
 
-        <EditText
+        <classes.widget.ClearEditText
             android:id="@+id/newPasswordEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -50,7 +50,7 @@
             android:paddingTop="12dp"
             android:paddingBottom="12dp"
             android:hint="@string/input_password"
-            android:inputType="textPassword"
+            android:drawableRight="@drawable/delete_start_drawable"
             android:textColor="@color/font_major_light"
             android:textColorHint="@color/hint_white"
             android:background="@null"
@@ -63,7 +63,7 @@
             android:layout_marginRight="10dp"
             layout="@layout/view_start_divider"/>
 
-        <EditText
+        <classes.widget.ClearEditText
             android:id="@+id/confirmPasswordEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -72,7 +72,7 @@
             android:paddingTop="12dp"
             android:paddingBottom="12dp"
             android:hint="@string/input_confirm_password"
-            android:inputType="textPassword"
+            android:drawableRight="@drawable/delete_start_drawable"
             android:textColor="@color/font_major_light"
             android:textColorHint="@color/hint_white"
             android:background="@null"
