--- a/app/src/main/res/layout/activity_start_sign_up_by_phone.xml
+++ b/app/src/main/res/layout/activity_start_sign_up_by_phone.xml
@@ -32,7 +32,7 @@
             android:contentDescription="@string/app_name"
             android:src="@drawable/start_icon" />
 
-        <EditText
+        <classes.widget.ClearEditText
             android:id="@+id/phoneEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -42,6 +42,7 @@
             android:paddingBottom="12dp"
             android:hint="@string/input_phone"
             android:inputType="phone"
+            android:drawableRight="@drawable/delete_start_drawable"
             android:textColor="@color/font_major_light"
             android:textColorHint="@color/hint_white"
             android:background="@null"
@@ -54,7 +55,7 @@
             android:layout_marginRight="10dp"
             layout="@layout/view_start_divider"/>
 
-        <EditText
+        <classes.widget.ClearEditText
             android:id="@+id/passwordEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -63,7 +64,7 @@
             android:paddingTop="12dp"
             android:paddingBottom="12dp"
             android:hint="@string/input_password"
-            android:inputType="textPassword"
+            android:drawableRight="@drawable/delete_start_drawable"
             android:textColor="@color/font_major_light"
             android:textColorHint="@color/hint_white"
             android:background="@null"
@@ -76,7 +77,7 @@
             android:layout_marginRight="10dp"
             layout="@layout/view_start_divider"/>
 
-        <EditText
+        <classes.widget.ClearEditText
             android:id="@+id/confirmPasswordEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -85,7 +86,7 @@
             android:paddingTop="12dp"
             android:paddingBottom="12dp"
             android:hint="@string/input_confirm_password"
-            android:inputType="textPassword"
+            android:drawableRight="@drawable/delete_start_drawable"
             android:textColor="@color/font_major_light"
             android:textColorHint="@color/hint_white"
             android:background="@null"
