--- a/app/src/main/res/layout/activity_start_sign_in.xml
+++ b/app/src/main/res/layout/activity_start_sign_in.xml
@@ -92,22 +92,11 @@
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/forgotTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:padding="16dp"
-        android:text="@string/forgot_password"
-        android:textSize="14sp"
-        android:textColor="@color/font_start" />
-
     <LinearLayout
         android:id="@+id/signUpLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:paddingTop="12dp"
         android:paddingBottom="12dp"
@@ -115,21 +104,32 @@
         android:paddingRight="16dp"
         android:gravity="center_vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toLeftOf="@+id/signUpImageView"
-            android:layout_marginRight="6dp"
-            android:text="@string/sign_up"
-            android:textColor="@color/font_start"
-            android:textSize="14sp" />
-
         <ImageView
             android:id="@+id/signUpImageView"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:contentDescription="@string/sign_up"
             android:src="@drawable/jump" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@+id/signUpImageView"
+            android:layout_marginLeft="6dp"
+            android:text="@string/sign_up"
+            android:textColor="@color/font_start"
+            android:textSize="14sp" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/forgotTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:padding="16dp"
+        android:text="@string/forgot_password"
+        android:textSize="14sp"
+        android:textColor="@color/font_start" />
 
 </RelativeLayout>
